--- a/task.ipynb
+++ b/task.ipynb
@@ -30,7 +30,7 @@
     "Для стимуляции спроса торговая компания может провести рекламную акцию в каждом из\n",
     "пунктов. Потенциальный эффект от рекламной акции (увеличение спроса на единицу стоимости рекламной акции) зависит от бюджета рекламной акции. Параметры зависимости различны для городов и сведены в табл. 2. Следует обратить внимание, что эффект характеризуется\n",
     "убывающей отдачей (что в определенной степени моделирует насыщение рынка). Так, например, при бюджете рекламной акции 120, увеличение спроса в первом городе будет вычисляться\n",
-    "следущим образом: $ 0.4*40 + 0.3*60 + 0.2*(120 - 40 - 60) $.\n",
+    "следущим образом: $ 0.4 \\cdot 40 + 0.3 \\cdot 60 + 0.2 \\cdot (120 - 40 - 60) $.\n",
     "Требуется:\n",
     "1. Определить минимальные издержки на реализацию всего товара.\n",
     "2. Выявить населенные пункты, требующие максимальный и минимальный рекламный бюджет.\n",
@@ -81,16 +81,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cvxopt.modeling import variable, op"
+    "from cvxopt.modeling import variable, op\n",
+    "from cvxopt import matrix, solvers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Определим минимальные издержки на реализацию всего товара:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = matrix([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1], tc='d')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +133,8 @@
       "[ 0.00e+00]\n",
       "\n",
       "Минимальные издержки на реализацию:\n",
-      "1250.0\n"
+      "1250.0\n",
+      "Great\n"
      ]
     }
    ],
@@ -140,37 +159,128 @@
     "print(\"Результат:\")\n",
     "print(x.value)\n",
     "print(\"Минимальные издержки на реализацию:\")\n",
-    "print(problem.objective.value()[0])"
+    "print(problem.objective.value()[0])\n",
+    "print(\"Great\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Status:  optimal\n",
-      "x = \n",
-      " [ 5.00e+00]\n",
-      "[ 6.00e+00]\n",
-      "[ 8.44e-01]\n",
-      "[ 0.00e+00]\n",
-      "[ 1.88e+00]\n",
-      "\n",
-      "Objective:  -1.881278538812786\n"
-     ]
-    }
-   ],
    "source": [
-    "h = matrix([0, 0, 0, 0, 0, 5, 6, 7, 8,\n",
-    "0, 0, 0, 0, 0], tc='d')\n",
-    "solution = solvers.lp(c, G.T, h, solver='glpk')\n",
-    "print('Status: ', solution['status'])\n",
-    "print('x = \\n', solution['x'])\n",
-    "print('Objective: ', solution['primal objective'])"
+    "### 2. Выявим населенные пункты, требующие максимальный и минимальный рекламный бюджет:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "На первом этапе решения задачи, называемом условной оптимизацией, определяются функция Беллмана и оптимальные управления для всех возможных состояний на каждом шаге, начиная с последнего в соответствии с алгоритмом обратной прогонки. На последнем, n-м, шаге оптимальное \n",
+    "управление хn* определяется функцией Беллмана: F(S) = max{n(S, xn)}, в соответствии с которой максимум выбирается \n",
+    "из всех возможных значений хn, причем хn X."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Управление: изменение распределния бюджета в зависимости от стоимости акции для каждого города. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание №2. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В районе города, схема которого изображена на рис. 1, рассматривается возможность размещения пожарных участков (возможные точки размещения обозначены номерами, линии соответствуют дорогам, а закрашенные эллипсы - природным объектам).  \n",
+    "Стоимость размещения участка в каждой из точек указана в табл. 3.   \n",
+    "Требуется найти такое размещение участков, при котором стоимость была бы минимальна, но (манхеттенское) расстояние от каждого перекрестка до ближайшего участка было не более 3.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*рис. 1*"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Условие задачи](images/image1.jpg \"почему..\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*табл. 3*"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Расположение | Стоимость, д.е. |\n",
+    "|--------------|-----------------|\n",
+    "| 1            | 15              |\n",
+    "| 2            | 15              |\n",
+    "| 3            | 12              |\n",
+    "| 4            | 20              |\n",
+    "| 5            | 14              |"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Пронумеруем все перекрестки, всего их 12, учитывая наличие природных объектов. Отобразим полученную схему на рис. 2."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Пронумерованные перекрестки](images/image2.jpg \"почему..\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Теперь, исходя из данной схемы, составим ограничения по каждому перекрестку:   \n",
+    "\n",
+    "$1: 0x_1 + 1x_2 + 1x_3 + 0x_4 + 0x_5 \\geqslant 1$  \n",
+    "$2: 0x_1 + 1x_2 + 1x_3 + 1x_4 + 0x_5 \\geqslant 1$  \n",
+    "$3: 0x_1 + 1x_2 + 1x_3 + 1x_4 + 0x_5 \\geqslant 1$  \n",
+    "$4: 0x_1 + 1x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
+    "$5: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 0x_5 \\geqslant 1$  \n",
+    "$6: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
+    "$7: 1x_1 + 1x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
+    "$8: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
+    "$9: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
+    "$10: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
+    "$11: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
+    "$12: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 0x_5 \\geqslant 1$  \n",
+    "\n"
    ]
   }
  ],
