fixed solver in 1.1

--- a/task.ipynb
+++ b/task.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,8 @@
       "[ 0.00e+00]\n",
       "\n",
       "Минимальные издержки на реализацию:\n",
-      "1250.0\n",
+      "[ 1.25e+03]\n",
+      "\n",
       "Great\n"
      ]
     }
@@ -151,15 +152,14 @@
     "lim5 = (x[1] +x[6] + x[11] == 37)\n",
     "lim6 = (x[2] + x[7] + x[12] == 53)\n",
     "lim7 = (x[3] + x[8] + x[13] == 26)\n",
-    "lim8 = (x[4] + x[9] + x[14] == 47)\n",
-    "x_non_negative = (x >= 0)    \n",
-    "problem = op(F, [lim1, lim2, lim3, lim4, lim5, lim6, lim7, lim8, x_non_negative])\n",
+    "lim8 = (x[4] + x[9] + x[14] == 47)   \n",
+    "problem = op(F, [lim1, lim2, lim3, lim4, lim5, lim6, lim7, lim8, x >= 0])\n",
     "problem.solve(solver='glpk')  \n",
     "problem.status\n",
     "print(\"Результат:\")\n",
     "print(x.value)\n",
     "print(\"Минимальные издержки на реализацию:\")\n",
-    "print(problem.objective.value()[0])\n",
+    "print(problem.objective.value())\n",
     "print(\"Great\")"
    ]
   },
