--- a/task.ipynb
+++ b/task.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = matrix([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1], tc='d')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +241,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Пронумеруем все перекрестки, всего их 12, учитывая наличие природных объектов. Отобразим полученную схему на рис. 2."
+    "### Формальная постановка:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ F = 15x_1 + 15x_2 + 12x_3 + 20x_4 + 14x_5 \\to min $"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для составления системы ограничений пронумеруем все перекрестки, всего их 12, учитывая наличие природных объектов. Отобразим полученную схему на рис. 2."
    ]
   },
   {
@@ -281,6 +288,70 @@
     "$11: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 1x_5 \\geqslant 1$  \n",
     "$12: 1x_1 + 0x_2 + 1x_3 + 1x_4 + 0x_5 \\geqslant 1$  \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status:  optimal\n",
+      "Результат:\n",
+      "x:  [ 0.00e+00]\n",
+      "[ 0.00e+00]\n",
+      "[ 1.00e+00]\n",
+      "[ 0.00e+00]\n",
+      "[ 0.00e+00]\n",
+      "\n",
+      "F =  [ 1.20e+01]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = variable(5, 'x')\n",
+    "F = (15 * x[0] + 15 * x[1] + 12 * x[2] + 20 * x[3] + 14 * x[4])\n",
+    "\n",
+    "lim1 = (x[1] + x[2] >=1)\n",
+    "lim2 = (x[1] + x[2] + x[3] >=1)\n",
+    "lim3 = (x[1] + x[2] + x[3] >=1)\n",
+    "lim4 = (x[1] + x[2] + x[3] + x[4] >=1)\n",
+    "lim5 = (x[0] + x[2] + x[3] >=1)\n",
+    "lim6 = (x[0] + x[2] + x[3] + x[4] >=1)\n",
+    "lim7 = (x[0] + x[1] + x[2] + x[3] + x[4] >=1)\n",
+    "lim8 = (x[0] + x[2] + x[3] + x[4] >=1)\n",
+    "lim9 = (x[0] + x[2] + x[3] + x[4] >=1)\n",
+    "lim10 = (x[0] + x[2] + x[3] + x[4] >=1)\n",
+    "lim11 = (x[0] + x[2] + x[3] + x[4] >=1)\n",
+    "lim12 = (x[0] + x[2] + x[3] >=1)\n",
+    "problem = op(F, [lim1, lim2, lim3, lim4, lim5, lim6, lim7, lim8, lim9, lim10, lim11, lim12, x >= 0])\n",
+    "problem.solve(solver='glpk')  \n",
+    "print('Status: ', problem.status)\n",
+    "print(\"Результат:\")\n",
+    "print('x: ', x.value)\n",
+    "print('F = ', problem.objective.value())\n",
+    "\n",
+    "# c = matrix([15, 15, 12, 20, 14], tc = 'd')\n",
+    "\n",
+    "# G = matrix([[0, 0, 0, 0, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+    "           #[-1, -1, -1, -1, 0, 0, -1, 0, 0, 0, 0, 0], \n",
+    "           #[-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1], \n",
+    "           #[0, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1], \n",
+    "           \n",
+    "           #[0, 0, 0, -1, 0, -1, -1, -1, -1, -1, -1, 0]], tc = 'd')\n",
+    "#h = matrix([-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1], tc='d')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Получили следующий результат: минимальная стоимость размещения участков равна 12 при размещении одного участка на точке 3. "
    ]
   }
  ],
