just add md decoration

--- a/task.ipynb
+++ b/task.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Формализация задачи: \n",
+    "\n",
+    "$F(x) = 10x_1 + 10x_2$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Результат:\n",
-      "[ 0.00e+00]\n",
+      "Status:  optimal\n",
+      "x:  [ 0.00e+00]\n",
       "[ 0.00e+00]\n",
       "[ 1.20e+01]\n",
       "[ 2.60e+01]\n",
@@ -123,9 +133,7 @@
       "[ 0.00e+00]\n",
       "[ 0.00e+00]\n",
       "\n",
-      "Минимальные издержки на реализацию:\n",
-      "[ 1.25e+03]\n",
-      "\n",
+      "Минимальные издержки на реализацию: 1250.0\n",
       "Great\n"
      ]
     }
@@ -146,12 +154,18 @@
     "lim8 = (x[4] + x[9] + x[14] == 47)   \n",
     "problem = op(F, [lim1, lim2, lim3, lim4, lim5, lim6, lim7, lim8, x >= 0])\n",
     "problem.solve(solver='glpk')  \n",
-    "problem.status\n",
-    "print(\"Результат:\")\n",
-    "print(x.value)\n",
-    "print(\"Минимальные издержки на реализацию:\")\n",
-    "print(problem.objective.value())\n",
+    "print('Status: ', problem.status)\n",
+    "print('x: ', x.value)\n",
+    "print(\"Минимальные издержки на реализацию:\", problem.objective.value()[0])\n",
     "print(\"Great\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Получили, что минимальные издержки на реализацию всего товара составляют 1250 единиц. "
    ]
   },
   {
@@ -167,17 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На первом этапе решения задачи, называемом условной оптимизацией, определяются функция Беллмана и оптимальные управления для всех возможных состояний на каждом шаге, начиная с последнего в соответствии с алгоритмом обратной прогонки. На последнем, n-м, шаге оптимальное \n",
-    "управление хn* определяется функцией Беллмана: F(S) = max{n(S, xn)}, в соответствии с которой максимум выбирается \n",
-    "из всех возможных значений хn, причем хn X."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Управление: изменение распределния бюджета в зависимости от стоимости акции для каждого города. "
+    "Данную задачу отнесем к задачам динамического программирования и в качестве управления выберем изменение распределения бюджета в зависимости от стоимости акции для каждого города. "
    ]
   },
   {
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +311,7 @@
       "[ 0.00e+00]\n",
       "[ 0.00e+00]\n",
       "\n",
-      "F =  [ 1.20e+01]\n",
-      "\n"
+      "F =  12.0\n"
      ]
     }
    ],
@@ -333,7 +336,7 @@
     "print('Status: ', problem.status)\n",
     "print(\"Результат:\")\n",
     "print('x: ', x.value)\n",
-    "print('F = ', problem.objective.value())\n",
+    "print('F = ', problem.objective.value()[0])\n",
     "\n",
     "# c = matrix([15, 15, 12, 20, 14], tc = 'd')\n",
     "\n",
