--- a/task.ipynb
+++ b/task.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задание №1. "
+    "### **Задание №1.**"
    ]
   },
   {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,20 +94,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Определим минимальные издержки на реализацию всего товара:"
+    "### *1.1. Определим минимальные издержки на реализацию всего товара:*"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Формальная постановка:  \n",
+    "$ F(x) = 10x_1 + 10x_2 + 7x_3 + 7x_4 + 7x_5 + 5x_6 + 7x_7 + 6x_8 + 5x_9 + 7x_{10} + 10x_{11} + 9x_{12} + 10x_{13} + 9x_{14} + 9x_{15} \\to min$\n",
+    "\n",
+    "$\\left\\{\\begin{matrix}\n",
+    "x_1 + x_2 + x_3 + x_4 + x_5 \\le 148  \\\\ \n",
+    "x_6 + x_7 + x_8 + x_9 + x_{10} \\le 108 \\\\ \n",
+    "x_{11} + x_{12} + x_{13} + x_{14} + x_{15} \\le 101 \\\\ \n",
+    "x_1 + x_6 + x_{11} = 56 \\\\ \n",
+    "x_2 + x_7 + x_{12} = 37 \\\\\n",
+    "x_3 + x_8 + x_{13} = 53 \\\\\n",
+    "x_4 + x_9 + x_{14} = 26 \\\\\n",
+    "x_5 + x_{10} + x_{15} = 47 \\\\\n",
+    "x \\ge 0\n",
+    "\\end{matrix}\\right. $\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Имеем классическую транспортную задачу линейного программирования. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Результат:\n",
-      "[ 0.00e+00]\n",
+      "Status:  optimal\n",
+      "x:  [ 0.00e+00]\n",
       "[ 0.00e+00]\n",
       "[ 1.20e+01]\n",
       "[ 2.60e+01]\n",
@@ -124,8 +153,7 @@
       "[ 0.00e+00]\n",
       "\n",
       "Минимальные издержки на реализацию:\n",
-      "[ 1.25e+03]\n",
-      "\n",
+      "1250.0\n",
       "Great\n"
      ]
     }
@@ -146,11 +174,10 @@
     "lim8 = (x[4] + x[9] + x[14] == 47)   \n",
     "problem = op(F, [lim1, lim2, lim3, lim4, lim5, lim6, lim7, lim8, x >= 0])\n",
     "problem.solve(solver='glpk')  \n",
-    "problem.status\n",
-    "print(\"Результат:\")\n",
-    "print(x.value)\n",
+    "print('Status: ', problem.status)\n",
+    "print('x: ', x.value)\n",
     "print(\"Минимальные издержки на реализацию:\")\n",
-    "print(problem.objective.value())\n",
+    "print(problem.objective.value()[0])\n",
     "print(\"Great\")"
    ]
   },
@@ -159,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Выявим населенные пункты, требующие максимальный и минимальный рекламный бюджет:"
+    "Таким образом, получили значение минимальных издержек на реализацию товара равное 1250 единиц. "
    ]
   },
   {
@@ -167,9 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На первом этапе решения задачи, называемом условной оптимизацией, определяются функция Беллмана и оптимальные управления для всех возможных состояний на каждом шаге, начиная с последнего в соответствии с алгоритмом обратной прогонки. На последнем, n-м, шаге оптимальное \n",
-    "управление хn* определяется функцией Беллмана: F(S) = max{n(S, xn)}, в соответствии с которой максимум выбирается \n",
-    "из всех возможных значений хn, причем хn X."
+    "### *1.2. Выявим населенные пункты, требующие максимальный и минимальный рекламный бюджет:*"
    ]
   },
   {
@@ -177,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Управление: изменение распределния бюджета в зависимости от стоимости акции для каждого города. "
+    "Данную задачу отнесем к задачам динамического программирования и в качестве управления выберем изменение распределения бюджета в зависимости от стоимости акции для каждого города."
    ]
   },
   {
@@ -185,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задание №2. "
+    "### **Задание №2.**"
    ]
   },
   {
@@ -292,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +332,7 @@
       "[ 0.00e+00]\n",
       "[ 0.00e+00]\n",
       "\n",
-      "F =  [ 1.20e+01]\n",
-      "\n"
+      "F =  12.0\n"
      ]
     }
    ],
@@ -333,7 +357,7 @@
     "print('Status: ', problem.status)\n",
     "print(\"Результат:\")\n",
     "print('x: ', x.value)\n",
-    "print('F = ', problem.objective.value())\n",
+    "print('F = ', problem.objective.value()[0])\n",
     "\n",
     "# c = matrix([15, 15, 12, 20, 14], tc = 'd')\n",
     "\n",
